# aidag-chain-engine

./: .gitignore  ACIL-DURUM.md  AIDAG_GENESIS_DAGITIM_ADRESLERI.md  AIDAG_KRITIK_YEDEKLEME.md  AUDIT_BULGULARI_2026-07-15.md  AUDIT_REMEDIATION_RAPORU.html  AVM_KOPRU_PLANI.md  AVM_YETKI_TASARIM.md  BAKIM-REHBERI.md  CONTRIBUTING.md  Cargo.toml  DUGUM_CALISTIRMA.md  EKOSISTEM_VIZYONU.md  GENESIS_DAGITIM.md  GHOSTDAG_BUG_KOK.md  GUVENLIK_KANITLARI.md  HAZINE_YONETIM.md  KALKAN_AI_TESPIT_TASARIM.md  KALKAN_GUVENLIK_KAPISI_TASARIM.md  LICENSE  MAINNET_HAZIRLIK_DENETIMI_2026-07-16.md  MAINNET_TEKONOMIK.md  NOTICE  NOTLAR_BILINEN_SINIRLAR.md  OVERCOUNT_KOK.md  README.md  TESTLER.md  TOKENOMICS_TASARIM.md  TOKENOMIK_ON_SATIS_PROGRAMI.html  U128_GECIS_PLANI.md  YAYIN-REHBERI.md  YOL_HARITASI.md  aidag-data-40001.log.testnet  avm_canli_test.py  avm_kontrat_canli_test.py  check.sh  guvenli_mod.sh  nohup-l  nonce_canli_test.py  saglik-kontrol.sh  (+4 more)
.github/workflows/: ci.yml
avm-sozlesmeler/: BelgeDamgasi.sol  BelgeDamgasi_sol_BelgeDamgasi.abi  Kasa.sol  Token.sol
lsc-engine/: .gitignore  Cargo.toml  README.md
lsc-engine/src/: avm.rs  genesis.rs  kubr_bytecode.hex  lib.rs  mainnet.rs  node.rs  registry.rs  tx.rs
lsc-engine/src/consensus/: finality.rs  ghostdag.rs  mod.rs
lsc-engine/src/dag/: graph.rs  mod.rs  orphan.rs  pipeline.rs  vertex.rs  wire.rs
lsc-engine/tests/: raw_tx_poc.rs  secp256k1_adres_poc.rs  secp256k1_ecrecover_poc.rs  secp256k1_islem_poc.rs  secp256k1_poc.rs
lsc-net/: Cargo.toml
lsc-net/src/: lib.rs  main.rs  rpc.rs  store.rs
lsc-net/tests/: restart_entegrasyon.rs
rwa-kontratlar/: KUBR.sol
rwa-kontratlar/cikti/: KUBR.abi
sdk/python/: README.md  aidag_sdk.py  ornek_kalkan.py  ornek_kurum.py
web/: belge-dogrulama.html  cuzdan.html
web/lib/: blake3.js
